--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -1,388 +1,80 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-body{
-}
-/* hero */
 *{
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding:0;
+    margin:0;
 }
-.hero{
-	height: 100vh;
-	width: 100%;
-	/* background-image: url("Images moving.png"); */
-	background-size: cover;
-	background-color: #000;
-	background-position: center;
-}
-nav{
-	display: flex;
-	align-items: right;
-	padding-top: 40px;
-	float: right;
-	margin-right: 200px;
-
-}
-.logo{
-	color: white;
-	font-size: 35px;
-	letter-spacing: 1px;
-	cursor: pointer;
-}
-span{
-	color: #f9004d;
-}
-nav ul a{
-	margin: 10px;
-}
-nav ul li{
-	list-style-type: none;
-	display: inline-block;
-	
-
-}
-nav ul li a{
-	color: white;
-	text-decoration: none;
-	font-weight: bold;
-	text-transform: capitalize;
-	
-	
-}
-nav ul li a:hover{
-	color: #faff00;
-	transition: .4s;
-}
-.btn{
-	background-color:#ffac12;
-	justify-content: space-between;
-	color: white;
-	text-decoration: none;
-	transition: transform .4s; 
-	box-sizing: border-box;
-}
-.btn1{
-	background-color:black;
-	justify-content: space-between;
-	color: white;
-	text-decoration: none;
-	transition: transform .4s; 
-
-}
-.btn:hover{
-	transform: scale(1.2);
-}
-.content{
-	position: absolute;
-	top: 50%;
-	left:8%;
-	transform: translateY(-50%);
-
-}
-.content h4{
-	font-size: 45px;
-	color: #faff00;
-}
-.content h3{
-	font-size: 20px;
-}
-h1{
-	color: white;
-	margin: 20px 0px 20px;
-	font-size: 75px;
-}
-h3{
-	color: white;
-	font-size: 12px;
-	margin-bottom: 50px;
-	font-family: Poppins;
-	font-weight: 100;
-}
-h4{
-	color: #fcfc;
-	letter-spacing: 2px;
-	font-size: 20px;
-}
-.newslatter form{
-	width: 380px;
-	max-width: 100%;
-	position: relative;
-}
-.newslatter form input:first-child{
-	display: inline-block;
-	width: 100%;
-	padding: 14px 130px 14px 15px;
-	border: 2px solid #f9004d;
-	outline: none;
-	border-radius: 30px;
-}
-.newslatter form input:last-child{
-	position: absolute;
-	display: inline-block;
-	outline: none;
-	border: none;
-	padding: 10px 30px;
-	border-radius: 30px;
-	background-color:#f9004d;
-	color: white;
-	box-shadow: 0px 0px 5px #000, 0px 0px 15px #858585;
-	top: 6px;
-	right: 6px; 
-}
-/* End Hero */
-
-/* Page break */
-.vertical{
-    width: 53%;
-    float: left;
-    padding: 50px 30px;
-    font-family: 'Nunito', sans-serif;
-	padding-bottom: 50px;
-  }
-  .vertical img{
-	  height: fit-content;
-	  margin: 20px auto;
-	}
-  
-  .horizontal {
-      margin: -30 40px;
-      display: flex;
-      justify-content: center;
-      font-family: 'Nunito', sans-serif;
-      margin-bottom: 3rem;
-    }
-	/* The beginning of the footer section */
-*{
-	margin:0;
-	padding:0;
-	box-sizing: border-box;
-}
-.container{
-	max-width: 1170px;
-	margin:auto;
-}
-.row{
-	display: flex;
-	flex-wrap: wrap;
-}
-ul{
-	list-style: none;
-}
-.footer{
-	background-color: #24262b;
-    padding: 70px 0;
-}
-.footer-col{
-   width: 25%;
-   padding: 0 15px;
-}
-.footer-col1{
-	width: 25%;
-	padding: 0 15px;
- }
-.footer-col h4{
-	font-size: 18px;
-	color: #ffffff;
-	text-transform: capitalize;
-	margin-bottom: 35px;
-	font-weight: 500;
-	position: relative;
-}
-.footer-col h4::before{
-	content: '';
-	position: absolute;
-	left:0;
-	bottom: -10px;
-	height: 2px;
-	box-sizing: border-box;
-	width: 50px;
-}
-.footer-col ul li:not(:last-child){
-	margin-bottom: 10px;
-}
-.footer-col ul li a{
-	font-size: 16px;
-	text-transform: capitalize;
-	color: #ffffff;
-	text-decoration: none;
-	font-weight: 300;
-	color: #bbbbbb;
-	display: block;
-	transition: all 0.3s ease;
-}
-.footer-col ul li a:hover{
-	color: #ffffff;
-	padding-left: 8px;
-}
-.footer-col .social-links a{
-	display: inline-block;
-	height: 40px;
-	width: 40px;
-	background-color: rgba(255,255,255,0.2);
-	margin:0 10px 10px 0;
-	text-align: center;
-	line-height: 40px;
-	border-radius: 50%;
-	color: #ffffff;
-	transition: all 0.5s ease;
-}
-.footer-col .social-links a:hover{
-	color: #24262b;
-	background-color: #ffffff;
-}
-.text{
-	color: #ffffff;
-	margin-bottom: 20px;
-	margin-left: 100px;
-}
-.span{
-	color: #ffac12;
-}
-.line{
-	margin-left: 100px;
-	margin-right: 100px;
-	margin-bottom: 30px;
-	opacity: 10%;
+.header{
+    overflow:hidden;
 }
 
-/responsive/
-@media(max-width: 767px){
-  .footer-col{
-    width: 50%;
-    margin-bottom: 30px;
-}
-}
-@media(max-width: 574px){
-  .footer-col{
-    width: 100%;
-}
-}
+/*--Class initial--*/
 
-/* Image gallery */
-
-
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}   
-
-.main{
-    font:16px/1.2 'Poppins', sans-serif;
-    background: black
-    linear-gradient(45deg, hsl(236, 100%, 80%,.4), rgba(205,155,225,.3));
-}
-
-.main{
-
-}
-
-.gallery {
-    --anim-time--hi: 266ms;
-    --anim-time--med: 400ms;
-    --anim-time--lo: 600ms;
-
-    display: flex;
-    place-content: center;
-    max-width: clamp(30rem, 95%, 50rem);
-    width: max(22.5rem, 100%);
-    min-height: 100vh;
-    margin-inline: auto;
-    padding: clamp(0px, (30rem  - 100vw) * 9999, 1rem);
-   
-}
-
-.gallery__content--flow {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-}
-
-.gallery__content--flow > *  {
-    flex-grow: 1;
-    flex-basis: calc((30rem - 100%) * 999);
-}
-
-figure {
-    display: flex;
-    min-width: 14rem;
-    max-height: 16rem;
-    position: relative;
-    border-radius: .35rem;
-    box-shadow:
-    rgb(40, 40, 40, 0.1) 0px 2px 3px,
-    rgb(20, 20, 20, 0.2) 0px 5px 8px,
-    rgb(0, 0, 0, 0.25) 0px 10px 12px;
-    overflow: hidden;
-    transition: transform var(--anim-time--med) ease;
-}
-
-figure::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(
-        to top,
-        hsla(0, 0%, 0%, 0.8) 0%,
-        hsla(0, 0%, 0%, 0.7) 12%,
-        hsla(0, 0%, 0%, 0.2) 41.6%,
-        hsla(0, 0%, 0%, 0.125) 50%,
-        hsla(0, 0%, 0%, 0.01) 59.9%,
-        hsla(0, 0%, 0%, 0) 100%
-    );
-    opacity: 0;
-    transition-property: opacity, transform;
-    transition-duration: var(--anim-time--med), var(--anim-time--med);
-    transition-timing-function: ease, ease;
-      z-index: 4;
-}
-
-.header__caption {
-    z-index: 10;
-    position: absolute;
-    display: inline-flex;
-    flex-direction: column;
-    align-self: flex-end;
-    width: 100%;
-    gap: 0.5rem;
-    padding: 1rem;
-    justify-content: center;
-    text-align: center;
-    transform: translateY(100%);
-    transition: transform var(--anim-time--hi) linear,
-    opacity var(--anim-time--hi) linear;
-}
-
-figure:hover::before {
-    opacity: 0.8;
-}
-
-figure:hover .header__caption {
-    transform: translateY(0);
-    opacity: 1;
-}
-figure:hover img{
-    transform: scale(1);
-}
-.title {
-    color: #fff;
+.header{
     
+    height:100vh;
+    max-width:100vw;
+    background-position:center;
+    background-repeat:no-repeat;
+    background-size:cover;
+	background-image:url("../Images/moving\ 1.png");
 }
 
-.title--primary {
-    font-size: 1.25rem;
-    font-weight: bold;
+.text h3{
+    max-width:600px;
+    color:rgb(209, 209, 209);
+    font-family:'Poppins', sans-serif;
+    font-size:32px;
+    font-weight:400;
 }
 
-img {
-    display: block;
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-    height: 100%;
-  transform: scale(1.15);
-    aspect-ratio: 16 / 13;
-    transition: 400ms ease-in-out;
+
+.header > nav > ul{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    height:100px;
+}
+
+.header > nav > ul > li{
+    list-style:none;
+    padding:0px 20px;
+}
+
+
+
+
+.login2{
+    padding:5px 10px;
+    background-color:rgb(0, 0, 0);
+    color:white;
+    border:none;
+}
+
+.text{
+    margin:5px 5px 5px 5px;
+    position:relative;
+    right:-50px;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-evenly;
+    height:80vh;
+}
+.text h1{
+    color:rgb(237, 237, 68);
+    font-size:48px;
+    font-family:'Adamina' , sans-serif;
+    max-width:600px;
+    font-weight:400;
+}
+
+.login1{
+    padding:5px 10px;
+    background-color:rgb(237, 237, 68);
+    border:none;
+    margin-right:10px;
+}
+
+.header > nav > ul > li > a{
+    text-decoration:none;
+    color:white;
 }
 
