updates changes on the horizontal line stylings

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -174,9 +174,9 @@
     height:30px;  
 }
 .horizontal line{
-    color: rgb(158, 121, 20);
+    color: rgb(194, 136, 29);
     width: 20%;
-    padding-right: 20px;
+    margin-right: 500px;
 }
 
 
